HTML: Renaming Base to AttrssBase